--- a/Chat-client/src/app/components/login/login.component.html
+++ b/Chat-client/src/app/components/login/login.component.html
@@ -1,4 +1,3 @@
-<!-- login.component.html -->
 <div class="login-container">
   <h2>Login</h2>
   <form>
@@ -20,7 +19,7 @@
       required
     />
 
-    <button (click)="onLogin()">Login</button>
+    <button class="login-btn" (click)="onLogin()">Login</button>
   </form>
 
   <h2>Register</h2>
@@ -52,7 +51,7 @@
       required
     />
 
-    <button (click)="onRegister()">Register</button>
+    <button class="register-btn" (click)="onRegister()">Register</button>
   </form>
-  <p *ngIf="errorMessage">{{ errorMessage }}</p>
+  <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
 </div>
